finalizado etapas entrega 2 mobile first-grid

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,13 @@ h3{font-size: 1.5rem;
     text-align: center;}
 h4{font-size: 1.2rem;
     text-align: center;}
+p{ font-size: 1.1rem;
+text-align: justify;}
 
 .container-fluid,.navbar-brand {
     font-size: 1.5rem;
 }
+
 @media (min-width: 425px){
     .header h1{
         font-size: 3.5rem;
@@ -44,6 +47,7 @@ h4{font-size: 1.2rem;
     h2{ font-size: 2.6rem;}
     h3{font-size: 2.2rem;}
     h4{font-size: 1.5rem;}
+    p {font: 1rem;}
 }
 
 @media screen and (min-width: 992px){
@@ -51,7 +55,8 @@ h4{font-size: 1.2rem;
     font-size: 2rem;
     gap:5rem;}
     .header h1{
-        font-size: 6rem;}
+        font-size: 6rem;} 
+    
     
 
 h1{font-size: 6rem;
@@ -69,8 +74,14 @@ h3{font-size: 2.2rem;
 h4{
     font-size: 1.7rem;
 margin: 3rem 0 1rem 0rem;
-}}
-
+}
+.nav-link:hover{
+    background-color: grey;
+    padding: 10px;
+}
+.nav-link {
+    transition:.3s;
+}
 .actualidad{
     display: flex;
     flex-direction: column;
@@ -82,6 +93,7 @@ margin: 3rem 0 1rem 0rem;
 .actualidad p{
     font-size: 1.2rem;
     margin: 0rem 2rem 2rem 2rem;
+    text-align: justify;
     
 }
 .actualidad img{
@@ -91,7 +103,8 @@ margin: 3rem 0 1rem 0rem;
     
     justify-content: center;
     
-    }
+    } 
+}
 @media (min-width:992px){
     h1{font-size: 6rem;}
     h2{font-size: 4rem;}
@@ -173,11 +186,14 @@ margin: 3rem 0 1rem 0rem;
     
 }
 .footer__imgfb{
-    width: 53rem;
+    width: 48rem;
+
 }
+
 .footer__imgig{
-    width: 53rem;
+    width: 48rem;
 }
+
 
 .footer__2{
 justify-items: center;
@@ -189,7 +205,7 @@ margin-left: 1rem;
     height: 30rem;
 }
 
-@media (min-width: 425px){
+@media (min-width: 426px){
 
 .footer__h2{
     display: flex;
@@ -239,7 +255,7 @@ margin-left: 1rem;
     
 }
 .historia p{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     margin: 0rem 2rem 2rem 2rem;
     
 }
@@ -247,35 +263,111 @@ margin-left: 1rem;
     width: 70rem;
     margin-top: 2.5rem;
     margin-bottom: 1rem;
+}
+
+.historia2 p {
+    font-size: 1.2rem;
+    text-align: justify;
+}
+.historia2 h3{
+    margin: 2rem;
+}
     
-    }
-@media (min-width:992px){
+   
+@media (min-width:992px) {
     h1{font-size: 6rem;}
-    h2{font-size: 4rem;}
+    h2{font-size: 4rem;
+    margin-bottom: 30px;}
     h3{font-size: 3rem;}
     h4{font-size: 2.5rem;}
     .historia{
-            display: grid;
-           grid-template-columns: repeat(2,1fr);
-           row-gap: 2rem;
-           column-gap: 2rem;
-           max-height: max-content;
-           align-items: stretch;
-           justify-items: stretch;
-        
-        
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        row-gap: 5rem;
+        column-gap: 2rem;
+        max-height: max-content;
+        align-items: flex-start;
+        justify-items: stretch;
+
         }
+
         .historia p{font-size: 1.5rem;
         
-    
         }
+
         .historia img{
            height: 350px;
            width: auto;
+           margin-top: 0;
+           margin-bottom: 0;
         }
-               
+        .historia2{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: justify;
         }
+        .historia2 p{
+            font-size: 1.5rem;
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }
+         .historia2 h3{
+            margin: 4rem;
+         } 
+         .footer__imgfb:hover{
+            width: 40rem;
+            transform: scale(1.5);
+        }
+        .footer__imgfb{
+            transition: all .3s;
+        
+        }
+        
+        .footer__imgig:hover{
+            width: 53rem;
+            transform: scale(1.5);
+        }
+        
+        .footer__imgig{
+            width: 53rem;
+            transition: all .3s;
+        }
+        
+        .footer__imgtw:hover{
+            transform: scale(1.5);
+        }
+        .footer__imgtw{
+            transition: all .3s;
+        }     
+}
 
+
+
+
+
+
+
+
+
+.cuestionario{
+    
+    font-size: 1.5rem;
+    margin-top: 3rem;
+    margin-left: 50rem;
+    margin-right: 50rem;} 
+
+/*Fotos y videos*/
+.video__historia1{
+    display: flex;
+   flex-wrap: column;
+   justify-content: center;
+   align-items: center;
+   width: 300px;
+}
+
+@media (min-width:768px){
 .video__historia1{
     display: flex;
    flex-wrap: wrap;
@@ -303,7 +395,13 @@ margin-left: 1rem;
     margin-left: 20rem;
    
 }
+}
 
+/*noticias*/
+.noticias p{
+    font-size: 1rem;
+}
+@media (min-width:768px){
 .noticias{
     display: flex;
     flex-direction: column;
@@ -312,32 +410,41 @@ margin-left: 1rem;
 }
 
 .noticias img{
-        padding: 1rem 10rem 3rem 10rem;
+        padding: 1rem 5rem 3rem 5rem;
         margin: 1rem 2rem 5rem 2rem
         }
 .noticias p{
     font-size: 2rem;
-    margin: 0rem 12rem 4rem 8rem;
-
+    margin: 0rem 6rem 4rem 4rem;}
 }
+
+    
+
+/*proximos juegos*/
 .juegos__1 img{
-    padding: 1rem 10rem 3rem 10rem;
-        margin: 1rem 2rem 5rem 20rem
+    display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   
    
 }
 .juegos p{
-    margin: 4em 0 2rem 1rem;
-    font-size: 2rem;
+    margin: 1rem;
+    font-size: 1.1re,};
+
+@media (min-width:768px){
+.juegos__1 img{
+    padding: 1rem 5rem 3rem 2rem;
+        margin: 1rem 2rem 5rem 3rem
    
 }
 
-
-.cuestionario{
-    
-    font-size: 1.5rem;
-    margin-top: 3rem;
-    margin-left: 50rem;
-    margin-right: 50rem;
-
+.juegos p{
+    margin: 3rem 0 2rem 1rem;
+    font-size: 2rem;
+   
+}
 }
 
+/*unete*/
