--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@ html {
     font-size: 62.5%;
 }
 
-img{max-width: 100%;}
+img{max-width: 100%;
+}
 
 .header {
     display: flex;
@@ -24,9 +25,11 @@ margin: 3rem 0 0 1rem;}
     justify-items: center;
     font-size: 2rem;
     color: blue;
+    
 }
 h1{font-size: 2rem;
-    text-align: center;}
+    text-align: center;
+    }
 h2{ font-size: 1.8rem;
     text-align: center;}
 h3{font-size: 1.5rem;
@@ -59,12 +62,12 @@ font-family:'Montserrat', sans-serif;}
     gap:5rem;}
     .header h1{
         font-size: 6rem;} 
-    
-    
+        
 
 h1{font-size: 6rem;
 color: blue;}
-a {text-decoration: none;}
+a {text-decoration: none;
+}
 
 h2{font-size: 4rem;
 margin: 3rem 0 1rem 0rem;
@@ -85,19 +88,19 @@ margin: 3rem 0 1rem 0rem;
 .nav-link {
     transition:.3s;
 }
-/*
 .actualidad{
-    display: flex;
-    flex-direction: column;
-    text-align: justify;
-    justify-content: center;
-    align-items: center;
-}*/
-    
-
+    display: grid;
+   grid-template-columns: repeat(2,1fr);
+   row-gap: 2rem;
+   column-gap: 2rem;
+   max-height: max-content;
+   align-items: stretch;
+   justify-items: stretch;
+}
+  
 .actualidad p{
-    font-size: 1.2rem;
-    margin: 0rem 2rem 2rem 2rem;
+    font-size: 1.5rem;
+    margin: 0rem;
     text-align: justify;
     font-family:'Montserrat', sans-serif
 }
@@ -105,43 +108,14 @@ margin: 3rem 0 1rem 0rem;
     width: 70rem;
     margin-top: 2.5rem;
     margin-bottom: 1rem;
-    
-    justify-content: center;
-    
-    } 
-
+    height: 350px;
+    justify-content: center;    
+} 
+    .actualidad img:first-child{
+        width: 462.5px;
+    }
 }
-@media (min-width:992px){
-   
-    .actualidad{
-            display: grid;
-           grid-template-columns: repeat(2,1fr);
-           row-gap: 2rem;
-           column-gap: 2rem;
-           max-height: max-content;
-           align-items: stretch;
-           justify-items: stretch;
-        
-        
-        }
-        .actualidad p{font-size: 1.5rem;
-            align-items: center;
-            margin: 0;
-            font-family:'Montserrat', sans-serif
-        }
-        .actualidad img{
-           height: 350px;
-           width: auto;
-          
-        }
-        .actualidad img:first-child{
-            width: 462.5px;
-        }
-        
-               
-        }
     
-       
 
 
  .carousel-inner{
@@ -266,8 +240,7 @@ margin-left: 1rem;
 .historia p{
     font-size: 1.1rem;
     margin-bottom: 2rem;
-    
-    
+    font-family:'Montserrat', sans-serif;   
 }
 
 .historia img{
@@ -279,6 +252,7 @@ margin-left: 1rem;
 .historia2 p {
     font-size: 1.2rem;
     text-align: justify;
+    font-family:'Montserrat', sans-serif;
 }
 .historia2 h3{
     margin: 2rem;
@@ -314,7 +288,7 @@ margin-left: 1rem;
         }
 
         .historia p{font-size: 1.5rem;
-        
+            font-family:'Montserrat', sans-serif;
         }
 
         .historia img{
@@ -328,6 +302,7 @@ margin-left: 1rem;
             font-size: 1.5rem;
             margin-top: 30px;
             margin-bottom: 30px;
+            font-family:'Montserrat', sans-serif;
         }
          .historia2 h3{
             margin: 4rem;
@@ -363,7 +338,8 @@ margin-left: 1rem;
     font-size: 1.5rem;
     margin-top: 3rem;
     margin-left: 50rem;
-    margin-right: 50rem;} 
+    margin-right: 50rem;
+    font-family:'Montserrat', sans-serif;} 
 
 /*Fotos y videos*/
 
@@ -521,6 +497,7 @@ width: 700px;
 /*noticias*/
 .noticias p{
     font-size: 1rem;
+    font-family:'Montserrat', sans-serif;
 }
 @media (min-width:768px){
 .noticias{
@@ -536,7 +513,8 @@ width: 700px;
         }
 .noticias p{
     font-size: 2rem;
-    margin: 0rem 6rem 4rem 4rem;}
+    margin: 0rem 6rem 4rem 4rem;
+    font-family:'Montserrat', sans-serif;}
 }
 
 
@@ -554,7 +532,10 @@ width: 700px;
 }
 .juegos p{
     margin: 1rem;
-    font-size: 1.1re,};
+    font-size: 1.1rem;
+    font-family:'Montserrat', sans-serif;
+}
+
 
 @media (min-width:768px){
 .juegos__1 img{
@@ -566,8 +547,12 @@ width: 700px;
 .juegos p{
     margin: 3rem 0 2rem 1rem;
     font-size: 2rem;
+    font-family:'Montserrat', sans-serif;
    
 }
 }
 
 /*unete*/
+.cuestionario label{
+    font-family:'Montserrat', sans-serif;
+}
