page unete cambios mobile first

--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,7 @@ p {
 }
 
 .historia2 p {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   text-align: justify;
   font-family: "Montserrat", sans-serif;
 }
@@ -531,10 +531,9 @@ p {
 
 .cuestionario {
   font-size: 1rem;
-  margin-left: 40px;
+  margin-left: 50px;
   margin-top: 30px;
   padding: 0;
-  width: 300px;
   height: 170px;
   font-family: "Montserrat", sans-serif;
 }
@@ -545,6 +544,32 @@ p {
 
 .cuestionario div {
   margin-bottom: 10px;
+}
+
+@media (min-width: 425px) {
+  .cuestionario {
+    font-size: 1.2rem;
+    margin-left: 40px;
+    margin-top: 50px;
+  }
+}
+@media (min-width: 768px) {
+  .cuestionario {
+    margin-left: 220px;
+  }
+}
+@media (min-width: 992px) {
+  .cuestionario {
+    font-size: 1.6rem;
+    margin-left: 300px;
+    height: 300px;
+  }
+  .botones {
+    margin-top: 30px;
+  }
+  .cuestionario div {
+    margin-bottom: 15px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
