--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -222,7 +222,35 @@ margin-left: 1rem;
 .jugadores img{
     height: 53rem;
 }
+
 }
+
+@media (min-width:768px){
+    .footer__1{
+        height: 70px;
+        margin-bottom: $espacio-grande;
+        margin-left: 250px;
+        margin-top:$espacio-grande;
+    }
+    .footer__imgfb{
+    width: 70px;
+}
+.footer__imgig{
+    width: 70px;
+}
+.footer__imgtw {
+    width: 70px;
+    height: 70px;
+}
+.footer__2{
+    display: flex;
+    justify-content: center;
+}
+
+
+
+}
+
 
 
 .actualidad h3{
@@ -310,8 +338,23 @@ margin-left: 1rem;
          .historia2 h3{
             margin: 4rem;
          } 
+         .footer-general {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            
+            
+         }
+         .footer__1{
+            height: 70px;
+            margin-bottom: $espacio-grande;
+            margin-left: 85px;
+            margin-top:$espacio-grande;
+            gap:$espacio-grande;
+        }
          .footer__imgfb:hover{
-            width: 40rem;
+            width: 85px;
             transform: scale(1.5);
         }
         .footer__imgfb{
@@ -320,21 +363,25 @@ margin-left: 1rem;
         }
         
         .footer__imgig:hover{
-            width: 53rem;
+            width: 85px;
             transform: scale(1.5);
         }
         
         .footer__imgig{
-            width: 53rem;
             transition: all .3s;
         }
         
         .footer__imgtw:hover{
+            width: 100px;
             transform: scale(1.5);
         }
         .footer__imgtw{
             transition: all .3s;
-        }     
+        } 
+        
+        .footer__2{
+            margin-top: $espacio-medio;
+        }
 }
 
 
@@ -469,6 +516,11 @@ width: 700px;
 .fotos__h2{
     margin: 1rem 0 3rem 0 ;
 }
+
+
+
+
+
 }
 @media (min-width:992px){
 .fotos__1{
@@ -508,14 +560,18 @@ width: 700px;
         margin: 1rem 2rem 5rem 2rem
         }
 .noticias p{
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0rem 6rem 4rem 4rem;
     font-family:'Montserrat', sans-serif;}
 }
 
+@media (min-width:992px){
+   .noticias p{font-size: 2rem;
+
+   } 
+}
 
 
-    
 
 /*proximos juegos*/
 .juegos__1 img{
@@ -582,8 +638,8 @@ width: 700px;
     @media (min-width: 768px){
        .cuestionario{
         margin-left: 220px;
-
        } 
+
 
     }
 
